--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h5>FullStack Developer</h5>
         </div>
         <div onclick="displayAbout()" id="arrow">
-          <i id='animation' class="fas fa-angle-down" style='color: #307fe2; background-color: #fff; width: 32px; border-radius:50%'></i>
+          <i id='animation' class="fas fa-angle-down"></i>
         </div>
         <div id="about">
           <p>
