docs-update README

--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
           <h5>FullStack Developer</h5>
         </div>
         <div onclick="displayAbout()" id="arrow">
-          <i id='animation' class="fas fa-angle-down"></i>
+          <i id="animation" class="fas fa-angle-down"></i>
         </div>
         <div id="about">
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ea
-            placeat esse aperiam deleniti. Labore excepturi dolor veritatis
-            accusamus sequi.
+            Graduada em Ciência da Computação, apaixonada por desenvolvimento de
+            software, preferencialmente Front End. Enfermeira em transição de
+            carreira, aberta a novas oportunidades. Resiliente e dinâmica, com
+            experiência de trabalho em equipe, comunicação assertiva e
+            inteligencia emocional.
           </p>
         </div>
         <div class="form">
